# nationseal

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  main.py  package.json  pyproject.toml  seyfert.config.mjs  tsconfig.json
nationseal/: __main__.py  antiraid.py  bot.py  config.py  data.py  db.py  dm.py  jsondb.py  main.py  models.py  permissions.py  sanctions.py  ui.py
nationseal/commands/: sanctions.py
nationseal/components/: __init__.py  builders.py  paginator.py
nationseal/events/: guild_create.py
src/: config.ts  index.ts
src/commands/sanctions/: appeal.ts  approve.ts  check.ts  decline.ts  enforce.ts  index.ts  info.ts  list.ts  local-enforce.ts  reviewer-add.ts  reviewer-list.ts  reviewer-remove.ts  submit.ts
src/components/: SanctionListPaginator.ts
src/events/: botReady.ts  guildCreate.ts
src/lib/: antiraid.ts  components.ts  db.ts  dm.ts  embeds.ts  jsondb.ts  permissions.ts  sanctions.ts  types.ts
