[project]
name = "nationseal"
version = "1.0.0"
description = "Shared, multi-server Discord sanctions bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nationseal = "nationseal.main:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.56",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "W191"]
